--- a/css/style.css
+++ b/css/style.css
@@ -66,6 +66,11 @@
     height: 250px;
 }
 
+.grid-container img:hover{
+    transform: scale(1.5);
+    transition: 0.3s;
+}
+
 .grid-container div {
     width: 300px;
     overflow: hidden;
